refactor: Clean up Model