@@ -10,84 +10,40 @@ import java.nio.*;
 import java.util.*;
 
 public final class ModelReader {
-    private static final int LodCount = 5;
-
-    private final BetterBuffer buffer;
     private final FileManager fileManager;
-    private final long hash;
 
-    private ModelHeader header;
-    private final List<ModelMeshInfo> meshInfos = new ArrayList<>();
-    private final List<List<ModelLodInfo>> lodInfos = new ArrayList<>();
-    private final List<List<GeometryMemoryLayout>> streamMemLayouts = new ArrayList<>();
-    private final List<GeometryDiskLayout> streamDiskLayouts = new ArrayList<>();
-
-    public ModelReader(BetterBuffer buffer, FileManager fileManager, long hash) {
-        this.buffer = buffer;
+    public ModelReader(FileManager fileManager) {
         this.fileManager = fileManager;
-        this.hash = hash;
     }
 
-    public Model read() throws IOException {
-        return read(true);
+    public Model read(BetterBuffer buffer) throws IOException {
+        return read(buffer, false, 0);
     }
 
-    public Model read(boolean readMeshes) throws IOException {
-        header = ModelHeader.read(buffer);
-        readMeshesAndLods();
-        var misc1 = ModelMisc1.read(buffer);
-        var geoDecals = ModelGeoDecals.read(buffer);
-        var misc2 = ModelMisc2.read(buffer);
-        buffer.skip(header.numMeshes() * LodCount);
+    public Model read(BetterBuffer buffer, boolean readStreams, long hash) throws IOException {
+        var model = Model.read(buffer);
 
         List<Mesh> meshes;
-        if (header.streamed()) {
-            readStreamInfo();
-            meshes = readMeshes ? readStreamedGeometry(0) : List.of();
+        if (model.header().streamed()) {
+            meshes = readStreams ? readStreamedGeometry(model, 0, hash) : List.of();
         } else {
-            meshes = readEmbeddedGeometry();
+            meshes = readEmbeddedGeometry(model, buffer);
         }
 
-        return new Model(header, meshInfos, lodInfos, misc1, geoDecals, misc2, streamMemLayouts, streamDiskLayouts, meshes);
-    }
-
-    private void readMeshesAndLods() {
-        for (var mesh = 0; mesh < header.numMeshes(); mesh++) {
-            meshInfos.add(ModelMeshInfo.read(buffer));
-
-            lodInfos.add(new ArrayList<>());
-            for (var lod = 0; lod < LodCount; lod++) {
-                if (!buffer.getIntAsBool()) {
-                    lodInfos.get(mesh).add(ModelLodInfo.read(buffer));
-                }
-            }
-        }
-    }
-
-    private void readStreamInfo() {
-        for (var lod = 0; lod < LodCount; lod++) {
-            var numStreams = buffer.getInt();
-            streamMemLayouts.add(new ArrayList<>());
-            for (var stream = 0; stream < numStreams; stream++) {
-                streamMemLayouts.get(lod).add(GeometryMemoryLayout.read(buffer));
-            }
-            streamDiskLayouts.add(GeometryDiskLayout.read(buffer));
-        }
         buffer.expectEnd();
+        return model.withMeshes(meshes);
     }
 
-    private List<Mesh> readEmbeddedGeometry() {
+    private static List<Mesh> readEmbeddedGeometry(Model model, BetterBuffer buffer) {
         List<Mesh> meshes = new ArrayList<>();
-        for (var i = 0; i < meshInfos.size(); i++) {
-            var lods = lodInfos.get(i);
-            assert lods.size() == 1;
-            meshes.add(readEmbeddedMesh(lods.get(0)));
+        for (var meshInfo : model.meshInfos()) {
+            assert meshInfo.lods().size() == 1;
+            meshes.add(readEmbeddedMesh(meshInfo.lods().getFirst(), buffer));
         }
-        buffer.expectEnd();
         return meshes;
     }
 
-    private Mesh readEmbeddedMesh(ModelLodInfo lodInfo) {
+    private static Mesh readEmbeddedMesh(ModelLodInfo lodInfo, BetterBuffer buffer) {
         var vertices = FloatBuffer.allocate(lodInfo.numVertices() * 3);
         var texCoords = lodInfo.flags() != 0x0801d ? FloatBuffer.allocate(lodInfo.numVertices() * 2) : null;
         var normals = FloatBuffer.allocate(lodInfo.numVertices() * 3);
@@ -116,15 +72,16 @@ public final class ModelReader {
         return new Mesh(vertices.flip(), normals.flip(), tangents.flip(), texCoords, null, null, null, indices);
     }
 
-    private List<Mesh> readStreamedGeometry(int lod) {
-        var hash = (this.hash << 4) | lod;
-        var size = streamDiskLayouts.get(lod).uncompressedSize();
+    private List<Mesh> readStreamedGeometry(Model model, int lod, long hash) {
+        var streamHash = (hash << 4) | lod;
+        var diskLayout = model.streamDiskLayouts().get(lod);
+        var uncompressedSize = diskLayout.uncompressedSize();
 
-        var buffer = fileManager.readStream(hash, size);
-        var lods = lodInfos.stream()
-            .<LodInfo>map(l -> l.get(lod))
+        var buffer = fileManager.readStream(streamHash, uncompressedSize);
+        var lods = model.meshInfos().stream()
+            .<LodInfo>map(mi -> mi.lods().get(lod))
             .toList();
-        var layouts = streamMemLayouts.get(lod);
+        var layouts = model.streamDiskLayouts().get(lod).memoryLayouts();
 
         return new GeometryReader(false).readMeshes(buffer, lods, layouts);
     }
